--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Fetch API Sandbox</title>
 </head>
 <body>
+    <script src="index.js" defer></script>
     <button id="getText">Get Text</button>
     <button id="getUsers">Get JSON</button>
     <button id="getPosts">Get API DATA</button>
     <hr>
-    <form action="" id="output">
+    <form id="addPost">
         <div>
-            <input type="text" id="title" placeholder="Tile">
+            <input type="text" id="title" placeholder="Title">
         </div>
         <div>
             <textarea id="body" placeholder="Body"></textarea>
@@ -21,65 +22,5 @@
         <input type="submit" value="Submit">
     </form>
     <div id="output"></div>
-    <script>
-        document.getElementById('getText').addEventListener('click', getText);
-        document.getElementById('getUsers').addEventListener('click', getUsers);
-        document.getElementById('getPosts').addEventListener('click', getPosts);
-
-        function getText() {
-            fetch('sample.txt')
-            .then(res => res.text())
-            .then(data => {
-                document.getElementById('output').innerHTML = data;
-            })
-            .catch(error => console.log(error))
-        }
-
-        function getUsers() {
-            fetch('users.json')
-            .then(res => res.json())
-            .then(data => {
-                let output = '<h2>Users</h2>';
-                // console.log(data);
-                data.forEach(function (user) {
-                    output += `
-                        <ul>
-                            <li>ID: ${user.id}</li>
-                            <li>Name: ${user.name}</li>
-                            <li>Email: ${user.email}</li>
-                        </ul>
-                    `;
-                });
-                document.getElementById(`output`).innerHTML = output;
-            })
-        }
-
-        function getPosts() {
-            fetch('https://jsonplaceholder.typicode.com/posts')
-            .then(res => res.json())
-            .then(data => {
-                let output = '<h2>Posts</h2>';
-                data.forEach(post => {
-                    output += `
-                        <div>
-                            <h3>${post.title}</h3>
-                            <p>${post.body}</p>
-                        </div>
-                    `;
-                });
-                document.getElementById(`output`).innerHTML = output;
-            })
-        }
-
-        // async function getText() {
-        //     let url = 'sample.txt';
-        //     try {
-        //         let res = await fetch(url);
-        //         // return await res.json();
-        //     } catch (error) {
-        //         console.log(error);
-        //     }
-        // }
-    </script>
 </body>
 </html>
