--- a/index.html
+++ b/index.html
@@ -4,23 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <script src="index.js" defer></script>
     <title>Fetch API Sandbox</title>
 </head>
 <body>
-    <script src="index.js" defer></script>
-    <button id="getText">Get Text</button>
-    <button id="getUsers">Get JSON</button>
-    <button id="getPosts">Get API DATA</button>
-    <hr>
-    <form id="addPost">
-        <div>
-            <input type="text" id="title" placeholder="Title">
+    <div class="container">
+        <h1 class="display-4 mb-4">Fetch API Sandbox</h1>
+        <div class="d-flex">
+            <button class="btn btn-primary me-4" id="getText">Get Text</button>
+            <button class="btn btn-warning me-4" id="getUsers">Get JSON</button>
+            <button class="btn btn-success me-4" id="getPosts">Get API DATA</button>
         </div>
-        <div>
-            <textarea id="body" placeholder="Body"></textarea>
-        </div>
-        <input type="submit" value="Submit">
-    </form>
-    <div id="output"></div>
+        <hr>
+        <div id="output"></div>
+        <form id="addPost">
+            <div class="form-group">
+                <div>
+                    <input class="form-control" type="text" id="title" placeholder="Title">
+                </div>
+                <div>
+                    <textarea class="form-control mt-3" id="body" placeholder="Body"></textarea>
+                </div>
+                <input type="submit" class="btn btn-danger mt-2" value="Submit">
+            </div>
+        </form>
+    </div>
 </body>
 </html>
